[package]
name = "akpull-dp"
version = "0.1.0"
edition = "2021"
authors = [ "dthusian" ]
description = "A smarter akpull"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
anyhow = "1.0.62"